--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #C7E5D0
+    background-color: #C7E5D0;
 }
 
 .container {
@@ -30,45 +30,10 @@ td {
     padding: 10px;
     text-align: left;
     border-bottom: 1px solid #FFFFF0;
+    transition: transform 0.3s ease;
 }
 
 th.sortable:hover {
     cursor: pointer;
-}
-
-.sort-asc::after {
-    content: " ▲";
-}
-
-.sort-desc::after {
-    content: " ▼";
-}
-
-th.sortable::after {
-    content: "";
-    display: inline-block;
-    width: 0;
-    height: 0;
-    vertical-align: middle;
-    margin-left: 5px;
-    border-left: 4px solid transparent;
-    border-right: 4px solid transparent;
-}
-
-th.sort-asc::after {
-    content: "";
-    border-bottom: 6px solid;
-}
-
-th.sort-desc::after {
-    content: "";
-    border-top: 6px solid;
-}
-
-tbody tr.team-1 {
-    background-color: #4169E1;
-}
-
-tbody tr.team-2 {
-    background-color: #FBC02D;
+    transform: translateY(-3px);
 }
